--- a/src/datepicker.css
+++ b/src/datepicker.css
@@ -24,7 +24,7 @@
   padding: 10px;
 }
 
-.year-header, .month-header {
+.year-header, .month-header, .weeks-header {
   text-align: center;
 }
 
@@ -53,4 +53,11 @@
 
 .month-header i {
   margin: 5px 0;
+}
+
+.week-header {
+  display: inline;
+  font-size: 10px;
+  margin: 2px;
+  font-weight: bold;
 }
